@@ -1,3 +1,7 @@
+2004-10-19	blytkerchan
+	* rw_spinlock.c (rw_spinlock_downgrade): new function
+	* rw_spinlock.h: ditto
+
 2004-09-13	blytkerchan
 	* semaphore.c (lt_sem_init): use atomic_set_int in stead of atomic_set
 	(lt_sem_deq): use atomic_set_ptr in stead of atomic_set
